Opened 10 years ago
Closed 10 years ago
#5868 closed defect (fixed)
Cygwin64 build fails for ffserver.o
| Reported by: | Tim Kiselev | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | build system |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
See http://fate.ffmpeg.org/history.cgi?slot=x86_64-win10-cygwin-gcc-5.4.0
Failing since revision N-81748-g47ea6f5, last checked on N-81780-g4a05d2e
% git reset --hard "origin/N-81748-g47ea6f5"
HEAD is now at 47ea6f5 lavd: drop SDL1 device and SDL1 support
% cd ../build
% ../src/configure --enable-gpl --enable-avresample
.....
% make
.....
src/ffserver.c: In function ‘main’:
src/ffserver.c:4003:5: error: implicit declaration of function ‘sigaction’ [-Werror=implicit-function-declaration]
sigaction(SIGCHLD, &sigact, 0);
^
cc1: some warnings being treated as errors
make: *** [/tmp/fate/build/src/common.mak:60: ffserver.o] Error 1
Fixed by using
% make CFLAGS="-Wno-error=implicit-function-declaration" (build finishes normally)
Change History (6)
comment:1 by , 10 years ago
comment:2 by , 10 years ago
Building does not work with --extra-cflags=-Wno-error=implicit-function-declaration?
comment:5 by , 10 years ago
CPPFLAGS= -D_ISOC99_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -U__STRICT_ANSI__ -DPIC -DZLIB_CONST
I'm not really that experienced in C development, so I'm kinda just poking around.
comment:6 by , 10 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Fixed with b7bd5b9794223f12203142159a22b176da2378e8
Note:
See TracTickets
for help on using tickets.



Actually, disabling the error breaks other parts of the build, so it's not a fix.