configure: define posix source on cygwin

Some function definitions are missing without it,
for example sigaction.

Fixes ticket #5868