libavcodec/x86/w64xmmtest.c
@@ -2,20 +2,20 @@
  * check XMM registers for clobbers on Win64
  * Copyright (c) 2012 Ronald S. Bultje <rsbultje@gmail.com>
  *
- * This file is part of Libav.
+ * This file is part of FFmpeg.
  *
- * Libav is free software; you can redistribute it and/or
+ * FFmpeg is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version.
  *
- * Libav is distributed in the hope that it will be useful,
+ * FFmpeg is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
  *
  * You should have received a copy of the GNU Lesser General Public
- * License along with Libav; if not, write to the Free Software
+ * License along with FFmpeg; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  */
 
@@ -23,7 +23,7 @@
 #include "libavutil/x86/w64xmmtest.h"
 
 wrap(avcodec_open2(AVCodecContext *avctx,
-                   const AVCodec *codec,
+                   AVCodec *codec,
                    AVDictionary **options))
 {
     testxmmclobbers(avcodec_open2, avctx, codec, options);
@@ -83,9 +83,9 @@ wrap(avcodec_send_packet(AVCodecContext *avctx, const AVPacket *avpkt))
     testxmmclobbers(avcodec_send_packet, avctx, avpkt);
 }
 
-wrap(avcodec_receive_packet(AVCodecContext *avctx, AVPacket *avpkt))
+wrap(avcodec_receive_frame(AVCodecContext *avctx, AVFrame *frame))
 {
-    testxmmclobbers(avcodec_receive_packet, avctx, avpkt);
+    testxmmclobbers(avcodec_receive_frame, avctx, frame);
 }
 
 wrap(avcodec_send_frame(AVCodecContext *avctx, const AVFrame *frame))
@@ -93,7 +93,7 @@ wrap(avcodec_send_frame(AVCodecContext *avctx, const AVFrame *frame))
     testxmmclobbers(avcodec_send_frame, avctx, frame);
 }
 
-wrap(avcodec_receive_frame(AVCodecContext *avctx, AVFrame *frame))
+wrap(avcodec_receive_packet(AVCodecContext *avctx, AVPacket *avpkt))
 {
-    testxmmclobbers(avcodec_receive_frame, avctx, frame);
+    testxmmclobbers(avcodec_receive_packet, avctx, avpkt);
 }
